@@ -1,18 +1,20 @@
 package me.melontini.commander.impl.expression.functions.arrays;
 
+import com.ezylang.evalex.EvaluationContext;
 import com.ezylang.evalex.EvaluationException;
-import com.ezylang.evalex.Expression;
 import com.ezylang.evalex.data.EvaluationValue;
+import com.ezylang.evalex.data.types.ArrayValue;
 import com.ezylang.evalex.functions.AbstractFunction;
 import com.ezylang.evalex.functions.FunctionParameter;
 import com.ezylang.evalex.parser.Token;
-
-import java.util.List;
+import java.util.Arrays;
 
 @FunctionParameter(name = "args", isVarArg = true)
 public class ArrayOf extends AbstractFunction {
-    @Override
-    public EvaluationValue evaluate(Expression expression, Token functionToken, EvaluationValue... par) throws EvaluationException {
-        return EvaluationValue.arrayValue(List.of(par));
-    }
+  @Override
+  public EvaluationValue evaluate(
+      EvaluationContext context, Token functionToken, EvaluationValue... par)
+      throws EvaluationException {
+    return ArrayValue.of(Arrays.asList(par));
+  }
 }
